added text-dark to buttons

--- a/index-1.html
+++ b/index-1.html
@@ -17,8 +17,8 @@
         <div class="pal-card p-4">
             <label for="letter" class="form-label fs-4">Enter a Word:</label>
             <input type="text" id="letter" class="form-control pal-input mb-3" placeholder="Type here..." />
-            <button id="proceed" class="pal-btn">Go!</button>
-            <button id="clear" class="pal-btn">clear</button>
+            <button id="proceed" class="pal-btn text-dark">Go!</button>
+            <button id="clear" class="pal-btn text-dark">clear</button>
             <a href="./index.html">
                 <button class="pal-btn text-decoration-none text-dark">Back</button>
             </a>
