--- a/index-2.html
+++ b/index-2.html
@@ -22,8 +22,8 @@
             <label for="letter-2" class="form-label fs-4">Enter Second Word:</label>
             <input type="text" id="letter-2" class="form-control pal-input mb-3" placeholder="Type here..." />
 
-            <button id="proceed" class="pal-btn">Go!</button>
-            <button id="clear" class="pal-btn">clear</button>
+            <button id="proceed" class="pal-btn text-dark">Go!</button>
+            <button id="clear" class="pal-btn text-dark">clear</button>
             <a href="./index.html">
                 <button class="pal-btn text-decoration-none text-dark">Back</button>
             </a>
