--- a/index-9.html
+++ b/index-9.html
@@ -21,8 +21,8 @@
 
             <h4 id="ans" class="text-center mt-4" style="height: 50px;"></h4>
 
-            <button class="pal-btn" id="proceed">Go!</button>
-            <button id="clear" class="pal-btn">clear</button>
+            <button class="pal-btn text-dark" id="proceed">Go!</button>
+            <button id="clear" class="pal-btn text-dark">clear</button>
             <a href="./index.html">
                 <button class="pal-btn text-decoration-none text-dark">Back</button>
             </a>
